accepted version of exposee + final frontmatter changes

--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -7,11 +7,11 @@
 \begin{center}
 \includegraphics[width=.67\linewidth, height=.2\linewidth]{fig/Logo_Header}
 \end{center}
-\mbox{}\\[1pc]
+%\mbox{}\\[1pc]
 \begin{center}
-    \huge{ \bfseries Optimizing Backhaul Performance in Geographically Distributed 5G Campus Networks: A Deterministic Multipath Solution}\\[2pc]
+    \LARGE{ \bfseries Design and Implementation of a Deterministic Multipath Solution for Optimizing Backhaul Performance in Geographically Distributed 5G Campus Networks}\\[2pc]
 
-    \Large{Nicolas Zunker}\\
+    \large{Nicolas Zunker}\\
     \large{n.zunker@campus.tu-berlin.de}\\[1pc]
     \large{\today}\\[2pc]
 
@@ -23,6 +23,6 @@
 
 Examiner 1: Prof. Dr. Thomas Magedanz
 \hfill\llap{Advisor: Hauke Buhr}\\
-Examiner 2: Prof. Dr. Marius Corici
+Examiner 2: Dr. Ing. Marius Corici
 
 \afterpage{\null\thispagestyle{empty}\newpage}
