start on thesis - rough draft of approach + parts of intro and bg

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -7,10 +7,10 @@
 \addcontentsline{toc}{section}{Declaration}
 I hereby declare that I have created the present work independently and by my own without illicit assistance and only utilizing the listed sources and tools.\\
 
-Hiermit erklaare ich, dass ich die vorliegende Arbeit selbststaandig und eigenhaandig sowie ohne unerlaubte fremde Hilfe und ausschliesslich unter Verwendung der aufgefaehrten Quellen und Hilfsmittel angefertigt habe.
+Hiermit erkläre ich, dass ich die vorliegende Arbeit selbstständig und eigenhändig sowie ohne unerlaubte fremde Hilfe und ausschliesslich unter Verwendung der aufgefährten Quellen und Hilfsmittel angefertigt habe.
 
 Die selbständige und eigenständige Anfertigung versichert an Eides statt:
 \begin{center}
-Berlin, den 13. Dezember 2021\\[3pc]
+Berlin, \today \\[3pc]
 Nicolas Zunker
 \end{center}
