--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -15,14 +15,14 @@
     \large{n.zunker@campus.tu-berlin.de}\\[1pc]
     \large{\today}\\[2pc]
 
-    MASTER'S THESIS EXPOSEE\\
+    MASTER'S THESIS\\
     Telecommunication Systems Institute\\
     Technische Universität Berlin
 \end{center}
 \vfill
 
 Examiner 1: Prof. Dr. Thomas Magedanz
-\hfill\llap{Advisor: Hauke Buhr}\\
-Examiner 2: Dr. Ing. Marius Corici
+\hfill\llap{Advisor: Hauke Buhr}\\ % and Marius???
+Examiner 2: Prof. Dr. Axel Küpper
 
 \afterpage{\null\thispagestyle{empty}\newpage}
