--- a/refs.bib
+++ b/refs.bib
@@ -273,3 +273,9 @@
   year={2019},
   publisher={IETF}
 }
+@article{murmurhash3,
+  title={MurmurHash3, 2012},
+  author={Appleby, Austin},
+  journal={URL: https://github. com/aappleby/smhasher/blob/master/src/MurmurHash3. cpp},
+  year={2012}
+}
